force-app/main/default/objects/SPEN_SurveySetting__mdt/SPEN_SurveySetting__mdt.object-meta.xml
<CustomObject>
    <description>CRMD-10382</description>
    <label>Survey Setting</label>
    <pluralLabel>Survey Settings</pluralLabel>
</CustomObject>