force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_Active__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>