force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_CaseOrigin__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseOrigin__c</fullName>
    <label>Case Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Phone</fullName>
                <default>true</default>
                <label>Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>