force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EmailTemplate__c</fullName>
    <description>Name of the email template to be used for surveys</description>
    <inlineHelpText>Name of the email template to be used for surveys</inlineHelpText>
    <label>Email Template</label>
    <length>200</length>
    <type>Text</type>
</CustomField>