force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_Expiryinhours__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Expiryinhours__c</fullName>
    <description>In how many hours the survey would expire</description>
    <inlineHelpText>In how many hours the survey would expire</inlineHelpText>
    <label>Expiry (in hours)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>