force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_Proactive__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Proactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used for Incident related surveys where customeres were proactively contacted in prior messaging tasks</description>
    <inlineHelpText>To be used for Incident related surveys where customeres were proactively contacted in prior messaging tasks</inlineHelpText>
    <label>Proactive</label>
    <type>Checkbox</type>
</CustomField>