force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_SurveyChannel__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyChannel__c</fullName>
    <description>Channel used to send the survey</description>
    <inlineHelpText>Channel used to send the survey</inlineHelpText>
    <label>Survey Channel</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Voice Alert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>