force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_SurveyName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SurveyName__c</fullName>
    <description>API name of the survey</description>
    <inlineHelpText>API name of the survey</inlineHelpText>
    <label>Survey Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>