force-app/main/default/objects/SPEN_SurveySetting__mdt/fields/SPEN_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Connections Delivery</fullName>
                <default>true</default>
                <label>Connections Delivery</label>
            </value>
            <value>
                <fullName>Connections Quotation</fullName>
            </value>
            <value>
                <fullName>Faults</fullName>
            </value>
            <value>
                <fullName>General Enquiries</fullName>
            </value>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Single Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>