force-app/main/default/objects/SPEN_SurveySetting__mdt/validationRules/EmailTemplatePopulatedForChannelEmail.validationRule-meta.xml
<ValidationRule>
    <fullName>EmailTemplatePopulatedForChannelEmail</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(SPEN_SurveyChannel__c) = &apos;Email&apos; &amp;&amp;  ISBLANK(SPEN_EmailTemplate__c), True, False)</errorConditionFormula>
    <errorDisplayField>SPEN_EmailTemplate__c</errorDisplayField>
    <errorMessage>Email template should be populated if channel is Email</errorMessage>
</ValidationRule>