force-app/main/default/objects/SPEN_SurveySetting__mdt/listViews/All_Survey_Settings.listView-meta.xml
<ListView>
    <fullName>All_Survey_Settings</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>SPEN_SurveyName__c</columns>
    <columns>SPEN_Type__c</columns>
    <columns>SPEN_SurveyChannel__c</columns>
    <columns>SPEN_Proactive__c</columns>
    <columns>SPEN_CaseOrigin__c</columns>
    <columns>SPEN_Expiryinhours__c</columns>
    <columns>SPEN_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Survey Settings</label>
    <language>en_US</language>
</ListView>